BLD: Mention production environment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,3 +10,6 @@ deploy:
     URL: gramex-ui
     VERSION: static
     SETUP: npm install && npm run build
+  environment:
+    name: production
+    url: https://gramener.com/gramex-network/
