--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ deploy:
     SETUP: npm install && npm run build
   environment:
     name: production
-    url: https://gramener.com/gramex-network/
+    url: https://gramener.com/gramex-ui/
